# Component-Warehouse-Manager

./: .gitignore  LICENSE  README.md  dev.py  pyproject.toml
client/: color.py  data_class.py  lite_message.py  login_scene.py  login_window.py  main.py  main_scene.py  scene.py  server.py  serverapi.py  splitline.py
server/: app.py  data_class.py  database.py  deploy.py  launch_app.py  load_dotenv.py  requirements.txt  undeploy.py
