[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "Component Warehouse Manager"
version = "1.0.0.dev1"
description = "元件仓库管理器"
authors = ["Fantastair <Fantastair@qq.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/Fantastair/Component-Warehouse-Manager"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = { version = "^0.135.3", extras = ["standard"] }
python-dotenv = "^1.2.2"
requests = "^2.33.1"
flet = "^0.84.0"

[tool.poetry.group.dev.dependencies]
typer = "^0.24.1"
black = "^24.8.0"
mypy = "^1.18.1"
pylint = "^4.0.4"
flet-cli = "^0.84.0"
flet-desktop = "^0.84.0"
flet-web = "^0.84.0"

[tool.flet]
org = "fantastair.cn"
product = "Component Warehouse Manager"
company = "Fantastair"
copyright = "Copyright (C) 2026 by Fantastair"

[tool.flet.app]
path = "client"

[tool.black]
line-length = 88

[tool.mypy]
strict = true
files = [
    "server/",
    "client/",
]
warn_unused_ignores = true
warn_unused_configs = true
exclude = [".venv/", "data_class.py"]
disable_error_code = [
    "import-untyped",
    "type-arg",
]

[tool.pylint.master]
jobs = 8

[tool.pylint.messages_control]
disable = [
    "too-many-locals",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-branches",
]

[tool.pylint.reports]
fail-under = 10.0
